--- a/views/updatelisting.handlebars
+++ b/views/updatelisting.handlebars
@@ -1,20 +1,39 @@
-﻿
-
-<h1><a href="/">Home</a></h1>
+﻿<h1><a href="/">Home</a></h1>
 <h1>Update {{listing.listing_title}}:</h1>
-<form id="update-listing" action="/listings" method="post">
-    Listing name: <input type="text" name="fname"><br>
-    Amount: <input type="number" min="0" name="amount"><br>
-    Price: <input type="number" step=".01" min="0" name="price"><br>
+<form id="updatelisting" action="/listing" method="post">
+    Listing Name: <input type="text" name="listing_title" value="{{listing.listing_title}}" required><br>
+    Amount (oz): <input type="number" step=".1" min="0" name="amount" value="{{listing.amount}}" required><br>
+    Price (USD): <input type="number" step=".01" min="0" name="price" value="{{listing.price}}" required><br>
     Dairy Free:
-    <input type="radio" name="dairy_free" value="No" checked>No
-    <input type="radio" name="dairy_free" value="Yes">Yes <br />
-    Frozen:
-    <input type="radio" name="frozen" value="No" checked>No
-    <input type="radio" name="frozen" value="Yes">Yes <br />
-    Start date: <input type="date" name="date_start"><br>
-    End date: <input type="date" name="date_end"><br>
-    
+    {{#if listing.dairy_free}}
+    <input type="radio" name="dairy_free" value="1" checked>Yes
+    <input type="radio" name="dairy_free" value="0">No<br />
+    {{else}}
+    <input type="radio" name="dairy_free" value="1">Yes
+    <input type="radio" name="dairy_free" value="0" checked>No<br />
+    {{/if}}
+    Frozen: {{frozen}}
+    {{#if listing.frozen}}
+    <input type="radio" name="frozen" value="1" checked>Yes
+    <input type="radio" name="frozen" value="0">No<br />
+    {{else}}
+    <input type="radio" name="frozen" value="1">Yes
+    <input type="radio" name="frozen" value="0" checked>No<br />
+    {{/if}}
+    Start date: <input type="date" name="date_start" value="{{listing.date_start}}"><br>
+    End date: <input type="date" name="date_end" value="{{listing.date_end}}"><br>
+    Active:
+    {{#if listing.active}}
+    <input type="radio" name="active" value="1" checked>Yes
+    <input type="radio" name="active" value="0">No<br />
+    {{else}}
+    <input type="radio" name="active" value="1">Yes
+    <input type="radio" name="active" value="0" checked>No<br />
+    {{/if}}
+    Shop Name: {{listing.shop_name}}<br />
+    <p>
+        Note: A listing has full participation with a merchant.<br>
+        It cannot be added without a merchant account.<br>
+    </p>
 </form>
-<button onclick="updateListing({{listing.id}})">Update</button>
-
+<button onclick="updateListing({{listing.lid}})">Update</button>
