duplicate checked update helpful
small changes while working on preopulating dropdowns, updated homepage
links slightly, and in process of working on add helpful to prevent
duplicates

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -14,12 +14,12 @@
     </li>
     <li>
         <a href='/listing'>
-            Show, Add, Delete Listings
+            Show, Add, Delete, Update Listings
         </a>
     </li>
     <li>
         <a href='/review'>
-            Show, Add, Delete Reviews
+            Show, Add, Delete, Update Reviews
         </a>
     </li>
     <li>
