minor changes to root URLs, required form fields

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -24,6 +24,6 @@
     </li>
     <li>
         <a href='/helpful'>
-            Show Reviews Marked Helpful (Many to Many table)
+            Show, Add, Delete, Update Reviews Marked Helpful (Many-to-Many table)
         </a>
     </li>
