--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -9,8 +9,8 @@
     <input type="radio" name="dairy_free" value=TRUE>Yes
     <input type="radio" name="dairy_free" value=FALSE checked>No<br />
     Frozen:
-    <input type="radio" name="frozen" value=TRUE>Yes
-    <input type="radio" name="frozen" value=FALSE checked>No<br />
+    <input type="radio" name="frozen" value=TRUE required>Yes
+    <input type="radio" name="frozen" value=FALSE checked required>No<br />
     Start date: <input type="date" name="date_start" required><br>
     End date: <input type="date" name="date_end" required><br>
     Shop Name: <select name="merchFK" id="shop-selector" required>
