--- a/views/users.handlebars
+++ b/views/users.handlebars
@@ -7,8 +7,8 @@
     Address Line 1: <input type="text" name="add_line1" required><br>
     Address Line 2: <input type="text" name="add_line2"><br>
     City: <input type="text" name="city" required><br>
-    State (e.g. CA): <input type="text" name="add_state" required><br>
-    Zip Code: <input type="number" name="zip" required><br>
+    State (e.g. CA): <input type="text" name="add_state" maxlength="2" required><br>
+    Zip Code: <input type="text" name="zip" maxlength="5" required><br>
     <input type="submit" value="Submit">
 </form>
 <h3>Current Users:</h3>
