--- a/views/addhelpful.handlebars
+++ b/views/addhelpful.handlebars
@@ -1,7 +1,7 @@
 <h1><a href="/">Home</a></h1>
 <h3>Mark a Review as Helpful:</h3>
 <form id="addHelpful" action="/helpful" method="post">
-    User Name: <select name="uid" id="user-selector" readyonly><br>
+    User Name: <select name="uid" id="user-selector" required readyonly><br>
         <option value="{{user.uid}}">{{user.fname}} {{user.lname}}</option>
 	</select><br>
     Review: <select name="rid" id="review-selector" required><br>
