--- a/views/updatereview.handlebars
+++ b/views/updatereview.handlebars
@@ -9,15 +9,15 @@
         <option value="4">4</option>
         <option value="5">5</option>
     </select><br>
-    Review Title: <input type="text" name="title" value="{{review.title}}"><br>
+    Review Title: <input type="text" name="title" value="{{review.title}}" required><br>
     Review Body: <input type="text" name="body" value="{{review.body}}"><br>
-    Reviewer: <select name="uid" id="user-selector">
+    Reviewer: <select name="uid" id="user-selector" required>
         {{#each user}}
         <option value="{{uid}}">{{fname}} {{lname}}</option>
         {{/each}}
     </select><br />
     Listing Title:
-    <select name="lid" id="listing-selector">
+    <select name="lid" id="listing-selector" required>
         {{#each listing}}
         <option value="{{lid}}">{{listing_title}}</option>
         {{/each}}
