updated views/home and views/updatereview with link to rubric, message about piazza

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -27,3 +27,6 @@
             Show Reviews Marked Helpful (Many to Many table)
         </a>
     </li>
+</ul>
+
+<b>Click here to see our website mapped to the grading rubric: </b><a href="https://tinyurl.com/ya6dxcce">https://tinyurl.com/ya6dxcce</a>
