--- a/views/updatereview.handlebars
+++ b/views/updatereview.handlebars
@@ -26,18 +26,7 @@
 <button onclick="updateReview({{review.rid}})">Update</button>
 <br /><br />
 
-<!--
-<h1>Mark {{review.title}} Helpful:</h1>
-<form id="mark-helpful" action="/review" method="post">
-    Reviewer: <select name="uid" id="user-selector">
-        {{#each user}}
-        <option value="{{uid}}">{{fname}} {{lname}}</option>
-        {{/each}}
-    </select><br />
-    Is this review helpful?
-    <input type="radio" name="helpful" value="No" checked>No
-    <input type="radio" name="helpful" value="Yes">Yes <br />
-    </select>
-</form>
-<button onclick="updateReview({{review.uid}})">Mark Helpful</button>
--->
+Note: A review has full participation with a listing.<br />
+It cannot be added without creating a listing.<br />
+Please visit the Reviews page to add a review and link it to a listing, or<br />
+delete the review and remove the relationship. See Piazza @195 @200.<br />
