Added shortURL, requirement 22-23 note
Kept getting merge conflicts, attempting to sync up after making some
manual changes

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -27,3 +27,6 @@
             Show, Add, Delete, Update Reviews Marked Helpful (Many-to-Many table)
         </a>
     </li>
+</ul>
+
+<a href="https://tinyurl.com/ya6dxcce"><b>Click here to see our website mapped to the grading rubric: </b></a>
