Minor updates + fix user update address
-Added "cancel" button to update pages and add helpful.
-Updated notes on add/remove 1-to-M relationship
-Listings columns displaying Yes/No (not 1/0)
-Decimal display in progress
-Fixed user add_state not updating

--- a/views/addhelpful.handlebars
+++ b/views/addhelpful.handlebars
@@ -9,5 +9,5 @@
 		<option value="{{rid}}">{{title}} by {{fname}} {{lname}}</option>
 		{{/each}}
     </select><br />
-    <input type="submit" value="Submit"><button type="cancel" onclick="javascript:window.location='/';">Cancel</button>
+    <input type="submit" value="Submit">  <button type="cancel" onclick="javascript:window.location='./';">Cancel</button>
 </form>
