--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -29,7 +29,7 @@
     </li>
 </ul>
 
-<a href="https://tinyurl.com/ya6dxcce"><b>Click here to see our website mapped to the grading rubric: </b></a>
+<a href="https://tinyurl.com/ya6dxcce"><b>Click here to see our website mapped to the grading rubric.</b></a>
 
 
 
