--- a/views/updatehelpful.handlebars
+++ b/views/updatehelpful.handlebars
@@ -10,4 +10,4 @@
 		{{/each}}
 		</select>
 </form>
-<button onclick="updateHelpful({{helpful.uid}}, {{helpful.rid}})">Update</button>
+<button onclick="updateHelpful({{helpful.uid}}, {{helpful.rid}})">Update</button><button type="cancel" onclick="javascript:window.location='../';">Cancel</button>
