--- a/views/updatemerchant.handlebars
+++ b/views/updatemerchant.handlebars
@@ -7,7 +7,7 @@
 	Active Listings: {{merchant.active_listings}}<br>
 	Total Listings: {{merchant.total_listings}}<br>
 </form>
-<button onclick="updateMerchant({{merchant.mid}})">Update</button>
+<button onclick="updateMerchant({{merchant.mid}})">Update</button><button type="cancel" onclick="javascript:window.location='./';">Cancel</button>
 <br>
 <p>Note: Dependent attributes must be modified by adding/deleting the entity<br>
 in question. E.g. Add or delete reviews to modify reviews received.</p>
