--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -45,9 +45,9 @@
     <thead>
     <th>Listing Name</th>
     <th>Shop Name</th>
-    <th>Amount (ounces)</th>
-    <th>Price</th>
-    <th>Price per Ounce</th>
+    <th>Amount (oz)</th>
+    <th>Price (USD)</th>
+    <th>Price per<br>Oz. (USD)</th>
     <th>Dairy Free</th>
     <th>Frozen</th>
     <th>Milk Start Date</th>
@@ -63,12 +63,24 @@
             <td>{{amount}}</td>
             <td>{{price}}</td>
             <td>{{price_per}}</td>
-            <td>{{dairy_free}}</td>
-            <td>{{frozen}}</td>
+            {{#if dairy_free}}
+				<td>Yes</td>
+			{{else}}
+				<td>No</td>
+			{{/if}}
+			{{#if frozen}}
+				<td>Yes</td>
+			{{else}}
+				<td>No</td>
+			{{/if}}
             <td>{{date_start}}</td>
             <td>{{date_end}}</td>
             <td>{{post_time}}</td>
-            <td>{{active}}</td>
+			{{#if active}}
+				<td>Yes</td>
+			{{else}}
+				<td>No</td>
+			{{/if}}
             <td><button onclick="deleteListing({{lid}})">Delete</button></td>
             <td><a href="/listing/{{lid}}">Update</a></td>
         </tr>
