--- a/views/updatereview.handlebars
+++ b/views/updatereview.handlebars
@@ -8,9 +8,9 @@
         <option value="4">4</option>
         <option value="5">5</option>
     </select><br>
-    Review Title: <input type="text" name="title" value="{{review.title}}" required><br>
-    Review Body: <input type="text" name="body" value="{{review.body}}"><br>
-    Reviewer: <select name="uid" id="user-selector" required>
+    Review Title: <input id="title" type="text" name="title" value="{{review.title}}" /><br>
+    Review Body: <input id="body" type="text" name="body" value="{{review.body}}" /><br>
+    Reviewer: <select name="uid" id="user-selector">
         {{#each user}}
         <option value="{{uid}}">{{fname}} {{lname}}</option>
         {{/each}}
