--- a/views/updateuser.handlebars
+++ b/views/updateuser.handlebars
@@ -13,5 +13,5 @@
 </form>
 <button onclick="updateUser({{user.uid}})">Update</button><button type="cancel" onclick="javascript:window.location='./';">Cancel</button>
 <br>
-<p>To add a merchant shop to a User, go to the <a href="/merchant">Merchants page</a><br>
-and create a new Merchant.</p>
+<p>To add a merchant shop to a User or change the 1-to-1 User-Merchant relationship <br>
+go to the <a href="/merchant">Merchants page</a> and create a new Merchant.</p>
